--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>7.2.0</version>
+            <version>7.2.3</version>
         </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>7.2.0</version>
+            <version>7.2.3</version>
             <scope>test</scope>
         </dependency>
 
@@ -39,6 +39,13 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>me.jvt.cucumber</groupId>
+            <artifactId>reporting-plugin</artifactId>
+            <version>7.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
